--- a/style.css
+++ b/style.css
@@ -3,3 +3,15 @@ img {
   margin: calc(10% / 6);
   height: 300px;
 }
+nav {
+  text-transform: uppercase;
+  border-bottom: 2px solid #f1f1f1;
+  width: 30%;
+  margin-left: calc(10% / 6);
+  padding: 20px 0;
+}
+h4 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
